# FIRSTRobots

./: .gitignore  .gitmodules  README.md
Code/: README.md
Code/AAronBot/: Constants.java
Code/JetsonNano/: CMakeLists.txt  README.md
Code/RaspberryPi/: smb.conf
Code/RaspberryPi/opencv/apriltags_opencv_demo/: CMakeCache.txt  CMakeLists.txt  Makefile  apriltagdemo  cmake_install.cmake  opencv_demo.cpp
Code/TasmanianKoala/: Character-0227.txt  Character-OnBlock.txt  FirstChar-vs1-v12-Sat-1-420200104-2029.json
Code/TornadoPlatypus/: characterization-data20200718-1550.json
Design/: README.md
Design/2019CHS4089/: 2019CHS4089.ipj  2019CHS4089.xlsx  4089.ipt  BaseFrame.iam  BatteryHighFront.ipt  BatteryHighSide.ipt  CameraMount v4.ipt  CameraMount v4.stl  CameraMount.ipt  CameraMount.stl  CameraMountBars.ipt  CameraMountBars.stl  CrossBeam.ipt  ElvCrossBeam.idw  ElvCrossBeam.ipt  ElvDel.dwg  ElvDel.idw  ElvDel.ipt  ElvDel.stl  ElvDelV3.ipt  ElvDelV4.ipt  ElvDelV4.stl  ElvDelV5.ipt  ElvDelV5.stl  ElvDelV6.ipt  ElvDelV6.stl  ElvEndEffectBeam.idw  ElvEndEffectBeam.ipt  ElvEndEffectFrame.iam  ElvEndEffectFrame.idw  ElvFixedBeam.dwg  ElvFixedBeam.idw  ElvFixedBeam.ipt  ElvFixedFrame-1.idw  ElvFixedFrame.iam  ElvFrontBeam.dwg  ElvFrontBeam.idw  ElvFrontBeam.ipt  ElvFrontFrame.iam  ElvFrontFrame.idw  (+66 more)
Design/4089DriversStation/: 4089DriversStation.ipj  4089DriversStation.xlsx  CBBLeft1.ipt  CBBLeft2.ipt  CBULeft1.ipt  CBULeft2.ipt  CPLLeftOne.ipt  CPLLeftOne.stl  CPLLeftThree.ipt  CPLLeftThree.stl  CPLLeftTwo.ipt  CPLLeftTwo.stl  CPLRightOne.ipt  CPLRightOne.stl  (+30 more)
(+1432 files in other folders)
